fix: social link spacing

--- a/src/style.less
+++ b/src/style.less
@@ -278,6 +278,7 @@ input[type=email] {
 			margin-right: 12px;
 			text-decoration: none;
 			opacity: 0.5;
+			margin-left: 0;
 			
 			img {
 				margin-right: 6px;
